--- a/template/populator.tmpl
+++ b/template/populator.tmpl
@@ -11,6 +11,17 @@ import (
 	
 	"github.com/charmbracelet/log"
 )
+
+// PopulateAll populates all the entities from the JSON data files.
+func (p *Popper) PopulateAll(ctx context.Context) error {
+	{{ range . }}
+	if _, err := p.Populate{{ . }}(ctx); err != nil {
+		return err
+	}
+	{{ end }}
+	return nil
+}
+
 {{ range . }}
 // Populate{{ . }} populates the {{ . }} entities from the JSON data files.
 func (p *Popper) Populate{{ . }}(ctx context.Context) ([]*ent.{{ . }}, error) {
