--- a/frontend/src/components/valuedisplay/ValueDisplay.css
+++ b/frontend/src/components/valuedisplay/ValueDisplay.css
@@ -1,30 +1,41 @@
 .value-display {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-  }
-  
-  .circle {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
-    color: white;
-    font-weight: bold;
-    position: relative;
-  }
-  
-  .label {
-    position: absolute;
-    bottom: -15px; /* Adjust this value for overlap amount */
-    background-color: lightgray;
-    padding: 2px 5px;
-    border-radius: 5px;
-    font-size: 12px;
-  }
-  
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  color: white;
+  font-weight: bold;
+}
+
+.label {
+  display: flex;
+  background-color: lightgray;
+  padding: 3px 6px;
+  border-radius: 3px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+/* Square box */
+.square {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-size: 12px;
+  border-radius: 3px;
+  z-index: 1; /* Ensure the square appears above the circle */
+}
